--- a/login.html
+++ b/login.html
@@ -537,7 +537,7 @@
             <div class="nav-container">
                 <a href="index.html" class="logo">
                     <i class="fas fa-plane-departure"></i>
-                    AirportLogo
+                    FameAir
                 </a>
             </div>
         </div>
@@ -817,4 +817,5 @@
         });
     </script>
 </body>
+
 </html>
